# genai-bootcamp

./: .gitignore
guides/: 01-generative-ai-foundations.md  02-nlp-transformers-llm-fundamentals.md  03-prompt-engineering.md  04-openai-apis-ai-application-integration.md  05-text-generation-chatbots.md  06-retrieval-multimodal-ai.md  07-responsible-ai-governance-guardrails.md
labs/module-01/: lab01_ai_hierarchy.html  lab02_ai_evolution_timeline.html  lab03_genai_types.html  lab04_model_ecosystem.html  lab05_responsible_ai.html
labs/module-02/: README.md  lab01_nlp_tasks.html  lab02_tokenization_playground.html  lab03_embeddings_visualizer.html  lab04_transformer_attention.html  lab05_prompt_response_lifecycle.html
labs/module-03/: lab01_prompt_components.html  lab02_zero_vs_few_shot.html  lab03_role_based_prompting.html  lab04_structured_outputs.html  lab05_prompt_optimization.html
labs/module-04/: lab01_openai_api_explorer.html  lab02_chat_completions.html  lab03_structured_outputs.html  lab04_api_parameters.html  lab05_application_pipeline.html
labs/module-04/openai-api-demo/: .env.example  01_openai_api.py  02_openai_api_completions.py  README.md
labs/module-04/openai-gemini-demo/: .env.example  (+4 more)
labs/module-04/openai-project/: .env.example  README.md  pyproject.toml
labs/module-04/openai-project/exercises/: 01_api_basics.py  02_chat_completions.py
labs/module-05/: lab01_chatbot_anatomy.html  lab02_conversation_designer.html  lab03_memory_strategies.html  lab04_streaming_personas.html  lab05_chatbot_pipeline.html
labs/module-05/chatbot-cli/: README.md  pyproject.toml
labs/module-05/chatbot-cli/exercises/: 01_minimal_chatbot.py  02_personas.py  03_memory_strategies.py  04_streaming.py  05_tool_calls.py
labs/module-05/chatbot-web/: .env.example  README.md  pyproject.toml
labs/module-05/chatbot-web/app/: main.py  personas.py  sessions.py
labs/module-05/chatbot-web/static/: index.html
labs/module-05/chatbot-web/tests/: test_smoke.py
labs/module-05/demos/demo-07-console-llm-app-to-rest-api/: .env.example  README.md  main.py  pyproject.toml
labs/module-06/: lab01-embeddings-vector-space.html  lab02-cosine-similarity.html  lab03-semantic-search-pipeline.html  lab04-diffusion-denoising.html  lab05-vector-database-ann.html
labs/module-06/chatbot-web-rag/: README.md  pyproject.toml
labs/module-06/chatbot-web-rag-upload/: .env.example  README.md  pyproject.toml
labs/module-06/chatbot-web-rag-upload/app/: main.py  personas.py
labs/module-06/chatbot-web-rag-upload/data/: accessories.md
labs/module-06/chatbot-web-rag-upload/static/: index.html
labs/module-06/chatbot-web-rag-upload/tests/: test_smoke.py
labs/module-06/chatbot-web-rag/app/: guardrails.py  main.py  memory.py  personas.py  rag.py
labs/module-06/chatbot-web-rag/data/: timeflow-x1-specs.md  warranty-and-returns.md
labs/module-06/chatbot-web-rag/static/: index.html
labs/module-06/chatbot-web-rag/tests/: test_smoke.py
labs/module-07/: lab01-guardrail-pipeline.html  lab02-prompt-injection-playground.html  lab03-pii-detection-redaction.html  lab04-content-moderation-scores.html  lab05-ai-governance-risk-tiers.html
labs/module-07/chatbot-web-rag-guardrails/: .env.example  .gitignore  README.md  pyproject.toml
labs/module-07/chatbot-web-rag-guardrails/app/: governance.py  guardrails.py  main.py  rag.py
labs/module-07/chatbot-web-rag-guardrails/data/: timeflow-app.md  timeflow-quicktips.txt
labs/module-07/chatbot-web-rag-guardrails/static/: index.html
labs/module-07/chatbot-web-rag-guardrails/tests/: conftest.py  test_smoke.py
(+70 files in other folders)
