[project]
name = "chatbot-cli"
version = "0.1.0"
description = "Module 5: Terminal chatbot demonstrating personas, memory strategies, streaming, and tool calls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tiktoken>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
