[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Module 6: the Module 5 streaming chatbot, enhanced with Retrieval-Augmented Generation (Chroma)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
