[project]
name = "console-llm-app-to-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.2",
    "google-generativeai>=0.8.5",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
